--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body{
         max-width: auto;
         grid-template-columns: 30% 50% 25% 30%;
     } 
-    @media only screen and (min-width: 720px) and (max-width: 1280px){
+    @media only screen and (min-width: 120px) and (max-width: 1800px){
         .apresentacao{
             grid-template-columns:30% 30% 15% 30%;
         }
@@ -114,14 +114,15 @@ body{
         text-align: right;
      }
      
-     a{
+     .links a{
+        font-size: 15px;
         margin: 2px;
         padding: 0 2px 0 9px;
         color: rgb(255, 255, 255);
         text-decoration:none;
         
      }
-     a:hover{
+     .links a:hover{
         color: rgb(0, 255, 13); 
         text-shadow: #4e08ff 0 0 10px;
         text-decoration: line-through;
@@ -137,12 +138,15 @@ body{
         font-size: 7px;
         background-color: rgb(57, 57, 57);
     }
-    @media only screen and (min-width: 720px) and (max-width: 1280px){
+    @media only screen and (min-width: 0px) and (max-width: 1280px){
         .links{
             top:1.5%;
-            font-size: 10px;
+            font-size: 20px;
         }
+        .links a{
+            font-size: 15px;
         }
+    }
     .links_fixo{
         display: flex;
         align-items: center;
@@ -191,52 +195,143 @@ body{
         margin-bottom: 5%;
     }
     .itens_foto:hover{
-        transform: translatex(30px) scale(1.5);
+        transform: translatey(-50px) scale(1.5);
     }
     
     
 
     .quem_somos{
-        height: 60vh;
+        height: auto;
         text-align: center;
         border-top:1%;border-top: solid #fff ;
         background-color:var(--fundo);
+        margin: auto;
     }
 
     .container_quemsomos{
-        margin: 7%;
+        margin-top: 4%;
         display: grid;
         justify-content: center; 
         align-items: center;  
-        grid-template-columns: 50% 40%;
+        flex-direction: row;
     }
     .texto_quemsomos{
-        line-clamp: 30;
+        font-size: 13px;
+        margin-bottom: 3% ;
     }
     .img_quemsomos{
         width: 40%;
-        margin: 3%;
+        justify-content: flex-end;
+        margin-bottom: 20%;
         border-radius: 10px;
         border: 1%;border: solid #ffffff;
         padding: 10px 10px;
         background-color: rgb(24, 128, 128);
     }
 
-    .grupo{
-        background-color: rgb(37, 37, 37);
-        border: 1%;border:  solid rgb(243, 243, 255);
-        margin:  0 5%;
+    @media only screen and (min-width: 720px) and (max-width: 1280px){
+        .img_quemsomos{
+            width: 40%;
+            margin-left: -30%;
+        }
+        .texto_quemsomos{
+            font-size: 15px;
+            justify-content: center;
+        }
+        .container_quemsomos{
+                margin-top: 4%;
+                display: inline-flex;
+                justify-content: center; 
+                align-items: flex-start;  
+                justify-items: stretch;
+            }
+        }
+    .equipe{
+        margin: 0 5%;
         border-radius: 10px;
-        display:inline-flex;
+        border: 1%;border:  solid rgb(243, 243, 255);
+        background-color: rgb(37, 37, 37);
+    }
+
+    .grupo{
+        display:grid;
+        grid-template-columns: 20% 20% 20%;
         align-items: center;
         justify-content:center ;
     }
     .integrantes{
+        width: 60%;
         border-radius: 50%;
-        width: 40%;
-        margin-top: 4%;
+        margin-top: 3%;
         border:1px solid #fff;
     }
     .nome_integrantes{
-        color: blue;
+        color: rgb(255, 255, 255);
+        font-size: 20px;
+        margin-bottom: 2%;
+    }
+
+    .local_section{
+        width: 100%;
+        margin-top: 3%;
+        align-items: center;
+        height: auto;
+        border-top:1% ;border-top: solid #fff; 
+    }
+    .localização{
+        display: flex;
+        justify-content: center;
+    }
+    .localização iframe{
+        border-radius: 10px;
+    }
+    
+    
+    .container {
+        border:1% ;border: solid #fff; 
+        max-width: 600px;
+        margin: 50px auto;
+        background-color: var(--section-conteudo);
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+    
+    
+    .lista-contatos {
+        list-style-type: none;
+        padding: 0;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    
+    .item-contato {
+        width: calc(33.33% - 10px); /* 3 itens por linha com espaçamento de 10px */
+        margin-bottom: 20px; /* Espaçamento vertical entre os itens */
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        box-sizing: border-box;
+    }
+    
+    .tipo-contato {
+        font-weight: bold;
+        display: block;
+        margin-bottom: 5px;
+    }
+    
+    .info-contato {
+        display: block;
+    }
+    
+    .link-github {
+        color: #007bff;
+        text-decoration: none;
+        transition: color 0.3s ease;
+    }
+    
+    .link-github:hover {
+        text-decoration: underline;
+        color: #0056b3;
     }
