--- a/style.css
+++ b/style.css
@@ -1,337 +1,370 @@
-:root{
+:root {
     --fundo: black;
     --section-conteudo: rgb(80, 80, 80);
 }
-*{
-    padding: 0%;
-    margin: 0%;
+
+* {
+    padding: 0;
+    margin: 0;
 }
 
-body{
-    background-color: black;
-    color:#fff;
+body {
+    background-color: var(--fundo);
+    color: #fff;
 }
 
-.logo{
+.logo {
     width: 50%;
     text-align: center;
-    top: 0%;
+    top: 0;
     margin-top: 3%;
     margin-left: 8%;
-} 
+}
+
 @media screen and (max-width: 600px) {
-    .logo{
+    .logo {
         width: 100%;
     }
 }
+
 .titulo {
     font-size: 3em;
-    line-height: 1.5; 
-    max-width: 800px; 
-    padding: 0 20px; 
+    line-height: 1.5;
+    max-width: 800px;
+    padding: 0 20px;
     text-align: center;
 }
 
 @media screen and (max-width: 600px) {
     .titulo {
         margin-left: -18%;
-        font-size: 1.9em; /* Reduzir o tamanho da fonte em telas menores */
-        line-height: 1.3; /* Reduzir o espaçamento entre linhas */
+        font-size: 1.9em;
+        line-height: 1.3;
     }
 }
-.cabecalho{
-    max-height:auto;
+
+.cabecalho {
+    max-height: auto;
     min-height: 30.5h;
     display: grid;
     justify-content: center;
     align-items: center;
     justify-self: center;
     text-align: center;
-    grid-template-columns:20% 50% 20%;
+    grid-template-columns: 20% 50% 20%;
     margin-bottom: 3%;
-    border-bottom:2px solid var(--section-conteudo) ;
+    border-bottom: 2px solid var(--section-conteudo);
 }
 
-    .apresentacao_section{
-        height: auto;
-        text-align: center;
-        
-    }
-    .apresentacao{
-        margin: 4% 0;
-        text-align: center;
-        display: grid;
-        justify-content: center;
-        align-items: center;
-        max-width: auto;
+.apresentacao_section {
+    height: auto;
+    width: 100%;
+    text-align: center;
+}
+
+.apresentacao {
+    margin: 4% 0;
+    text-align: center;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    max-width: auto;
+    grid-template-columns: 30% 50% 25% 30%;
+}
+
+@media only screen and (max-width: 600px) {
+    .apresentacao {
         grid-template-columns: 30% 50% 25% 30%;
-    } 
-    @media only screen and (min-width: 120px) and (max-width: 1800px){
-        .apresentacao{
-            grid-template-columns:30% 30% 15% 30%;
-        }
-        .apresentacao_section{
-            height: 60vh;
-            
-        }
-        }
-
-    .titulo_apresentacao{
-        font-size: 30px;
-        font-family: cursive;
     }
 
-    .caixa_apresentacao{
-        display: block;
-        font-weight: 200;
-        background-color: var(--section-conteudo);
-        text-align: left;
-        justify-self:center ;
-        padding: 1% 1% 1% 1% ;
-        align-items: center;
-        border:1%;border: solid rgb(255, 248, 248);
-        min-height: 93%;
-        min-width: 100%;
-        border-radius: 10px;
+    .apresentacao_section {
+        height: 40vh;
     }
+}
 
-    section b{
-        color: orange;
-    }
+.titulo_apresentacao {
+    font-size: 30px;
+    font-family: cursive;
+}
 
-    .imagem{
-        margin-left: 3%;
-        height: 94%;
-        width: 90%;
-        min-height: 94%;
-        min-width: 90%;
-        max-height: 94%;
-        max-width: 90%;
-        background-color: rgb(2, 46, 75);
-    }
-   
-    .caixa_apresentacao nav{ 
-        text-align: right;
-     }
-     
-     .links a{
-        font-size: 15px;
-        margin: 2px;
-        padding: 0 2px 0 9px;
-        color: rgb(255, 255, 255);
-        text-decoration:none;
-        
-     }
-     .links a:hover{
-        color: rgb(0, 255, 13); 
-        text-shadow: #4e08ff 0 0 10px;
-        text-decoration: line-through;
-     }
-    .links{
-        top:1%;
-        position: fixed;
-        justify-content: flex-end;
-        display: grid;
-        text-align: left; 
-        border: 2px solid rgb(255, 255, 255);
-        border-radius: 10px;
-        font-size: 7px;
-        background-color: rgb(57, 57, 57);
-    }
-    @media only screen and (min-width: 0px) and (max-width: 1280px){
-        .links{
-            top:1.5%;
-            font-size: 20px;
-        }
-        .links a{
-            font-size: 15px;
-        }
-    }
-    .links_fixo{
-        display: flex;
-        align-items: center;
-        justify-content: flex-end;
-    }
+.caixa_apresentacao {
+    display: block;
+    font-weight: 200;
+    background-color: var(--section-conteudo);
+    text-align: left;
+    justify-self: center;
+    padding: 1% 1% 1% 1%;
+    align-items: center;
+    border: 1%;
+    border: solid rgb(255, 248, 248);
+    min-height: 93%;
+    min-width: 100%;
+    border-radius: 10px;
+}
 
+section b {
+    color: orange;
+}
 
-    .projetos{
-        flex-wrap: wrap;
-        text-align: center;
-        border-top:1%; border-top:solid #fff ;
-        height: auto;
-        background-color: var(--fundo);
-    }
-    .titulo_projetos{
-        font-size: 30px;
-        font-family: cursive;
-        text-align: center; 
-        margin-bottom: 3%;
-        margin-top: 1%;
-    }
-    .itens_projeto{
-        display: flex;
-        margin: auto;
-        grid-template-columns: 23% 23% 23% 23%;
-        justify-content: center;
-        justify-self: center;
-        align-items: center;
-    }
-    .itens{
-        flex-grow: 1;
-        flex-basis: 200;
-        display: block;
-        margin-top: 5%;
-    }
-    .nome_projeto{
+.imagem {
+    margin-left: 3%;
+    height: 94%;
+    width: 90%;
+    min-height: 94%;
+    min-width: 90%;
+    max-height: 94%;
+    max-width: 90%;
+    background-color: rgb(2, 46, 75);
+}
 
-        margin-top: -1%;
-        margin-bottom: 2%;
-        color: rgb(255, 255, 255);
-    }
-     .itens_foto{
-        border-radius: 10px;
-        border: 2px solid rgb(255, 255, 255);
-        width: 70%;
-        margin-bottom: 5%;
-    }
-    .itens_foto:hover{
-        transform: translatey(-50px) scale(1.5);
-    }
-    
-    
+.caixa_apresentacao nav {
+    text-align: right;
+}
 
-    .quem_somos{
-        height: auto;
-        text-align: center;
-        border-top:1%;border-top: solid #fff ;
-        background-color:var(--fundo);
-        margin: auto;
-    }
+.links a {
+    font-size: 15px;
+    margin: 2px;
+    padding: 0 2px 0 9px;
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+}
 
-    .container_quemsomos{
-        margin-top: 4%;
-        display: grid;
-        justify-content: center; 
-        align-items: center;  
-        flex-direction: row;
-    }
-    .texto_quemsomos{
-        font-size: 13px;
-        margin-bottom: 3% ;
-    }
-    .img_quemsomos{
-        width: 40%;
-        justify-content: flex-end;
-        margin-bottom: 20%;
-        border-radius: 10px;
-        border: 1%;border: solid #ffffff;
-        padding: 10px 10px;
-        background-color: rgb(24, 128, 128);
-    }
+.links a:hover {
+    color: rgb(0, 255, 13);
+    text-shadow: #4e08ff 0 0 10px;
+    text-decoration: line-through;
+}
 
-    @media only screen and (min-width: 720px) and (max-width: 1280px){
-        .img_quemsomos{
-            width: 40%;
-            margin-left: -30%;
-        }
-        .texto_quemsomos{
-            font-size: 15px;
-            justify-content: center;
-        }
-        .container_quemsomos{
-                margin-top: 4%;
-                display: inline-flex;
-                justify-content: center; 
-                align-items: flex-start;  
-                justify-items: stretch;
-            }
-        }
-    .equipe{
-        margin: 0 5%;
-        border-radius: 10px;
-        border: 1%;border:  solid rgb(243, 243, 255);
-        background-color: rgb(37, 37, 37);
-    }
+.links {
+    top: 1%;
+    position: fixed;
+    justify-content: flex-end;
+    display: grid;
+    text-align: left;
+    border: 2px solid rgb(255, 255, 255);
+    border-radius: 10px;
+    font-size: 7px;
+    background-color: rgb(57, 57, 57);
+}
 
-    .grupo{
-        display:grid;
-        grid-template-columns: 20% 20% 20%;
-        align-items: center;
-        justify-content:center ;
-    }
-    .integrantes{
-        width: 60%;
-        border-radius: 50%;
-        margin-top: 3%;
-        border:1px solid #fff;
-    }
-    .nome_integrantes{
-        color: rgb(255, 255, 255);
+@media only screen and (min-width: 0px) and (max-width: 1280px) {
+    .links {
+        top: 1.5%;
         font-size: 20px;
-        margin-bottom: 2%;
     }
 
-    .local_section{
-        width: 100%;
-        margin-top: 3%;
-        align-items: center;
-        height: auto;
-        border-top:1% ;border-top: solid #fff; 
+    .links a {
+        font-size: 15px;
     }
-    .localização{
-        display: flex;
+}
+
+.links_fixo {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.projetos {
+    flex-wrap: wrap;
+    text-align: center;
+    border-top: 1%;
+    border-top: solid #fff;
+    height: auto;
+    width: 100%;
+    background-color: var(--fundo);
+}
+
+.titulo_projetos {
+    font-size: 30px;
+    font-family: cursive;
+    text-align: center;
+    margin-bottom: 3%;
+    margin-top: 1%;
+}
+
+.itens_projeto {
+    display: flex;
+    margin: auto;
+    grid-template-columns: 23% 23% 23% 23%;
+    justify-content: center;
+    justify-self: center;
+    align-items: center;
+}
+
+.itens {
+    flex-grow: 1;
+    flex-basis: 200;
+    display: block;
+    margin-top: 5%;
+}
+
+.nome_projeto {
+    margin-top: -1%;
+    margin-bottom: 2%;
+    color: rgb(255, 255, 255);
+}
+
+.itens_foto {
+    border-radius: 10px;
+    border: 2px solid rgb(255, 255, 255);
+    width: 70%;
+    margin-bottom: 5%;
+}
+
+.itens_foto:hover {
+    transform: translateY(-50px) scale(1.5);
+}
+
+.quem_somos {
+    height: auto;
+    text-align: center;
+    border-top: 1%;
+    border-top: solid #fff;
+    background-color: var(--fundo);
+    margin: auto;
+}
+
+.container_quemsomos {
+    margin-top: 4%;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+
+.texto_quemsomos {
+    font-size: 13px;
+    margin-bottom: 3%;
+}
+
+.img_quemsomos {
+    width: 40%;
+    justify-content: flex-end;
+    margin-bottom: 20%;
+    border-radius: 10px;
+    border: 1%;
+    border: solid #ffffff;
+    padding: 10px 10px;
+    background-color: rgb(24, 128, 128);
+}
+
+@media only screen and (min-width: 720px) and (max-width: 1280px) {
+    .img_quemsomos {
+        width: 40%;
+        margin-left: -30%;
+    }
+
+    .texto_quemsomos {
+        font-size: 15px;
         justify-content: center;
     }
-    .localização iframe{
-        border-radius: 10px;
+
+    .container_quemsomos {
+        margin-top: 4%;
+        display: inline-flex;
+        justify-content: center;
+        align-items: flex-start;
+        justify-items: stretch;
     }
-    
-    
-    .container {
-        border:1% ;border: solid #fff; 
-        max-width: 600px;
-        margin: 50px auto;
-        background-color: var(--section-conteudo);
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-    
-    
-    .lista-contatos {
-        list-style-type: none;
-        padding: 0;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-    }
-    
-    .item-contato {
-        width: calc(33.33% - 10px); /* 3 itens por linha com espaçamento de 10px */
-        margin-bottom: 20px; /* Espaçamento vertical entre os itens */
-        padding: 10px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        box-sizing: border-box;
-    }
-    
-    .tipo-contato {
-        font-weight: bold;
-        display: block;
-        margin-bottom: 5px;
-    }
-    
-    .info-contato {
-        display: block;
-    }
-    
-    .link-github {
-        color: #007bff;
-        text-decoration: none;
-        transition: color 0.3s ease;
-    }
-    
-    .link-github:hover {
-        text-decoration: underline;
-        color: #0056b3;
-    }
+}
+
+.equipe {
+    margin: 0 5%;
+    border-radius: 10px;
+    border: 1%;
+    border: solid rgb(243, 243, 255);
+    background-color: rgb(37, 37, 37);
+}
+
+.grupo {
+    display: grid;
+    grid-template-columns: 25vh 3% 25vh 3% 25vh;
+    align-items: center;
+    justify-content: center;
+}
+
+.integrantes {
+    margin: 5%;
+    width: 100%;
+    border-radius: 50%;
+    margin-top: 3%;
+    border: 1px solid #fff;
+}
+
+.nome_integrantes {
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    margin-bottom: 2%;
+}
+
+.local_section {
+    margin-top: 3%;
+    height: auto;
+    border-top: 1%;
+    border-top: solid #fff;
+}
+
+.localização {
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+}
+.local{
+    width: 300%;
+    text-align: center;
+}
+
+.localização iframe {
+    border-radius: 10px;
+    width: 700px;
+    height: 300px;
+}
+
+.container {
+    border: 1%;
+    border: solid #fff;
+    max-width: 600px;
+    margin: 50px auto;
+    background-color: var(--section-conteudo);
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.lista-contatos {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.item-contato {
+    width: calc(33.33% - 10px);
+    margin-bottom: 20px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+}
+
+.tipo-contato {
+    font-weight: bold;
+    display: block;
+    margin-bottom: 5px;
+}
+
+.info-contato {
+    display: block;
+}
+
+.link-github {
+    color: #007bff;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.link-github:hover {
+    text-decoration: underline;
+    color: #0056b3;
+}
