--- a/style.css
+++ b/style.css
@@ -9,19 +9,43 @@
 }
 
 body {
+    text-align: center;
     background-color: var(--fundo);
-    color: #fff;
+    color: #ffffff;
+}
+
+.cabecalho {
+    padding: 2% 0;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    justify-self: center;
+    text-align: center;
+    grid-template-columns: 20% 50% 20%;
+    margin-bottom: 3%;
+    border-bottom: 2px solid var(--section-conteudo);
+}
+@media screen and (max-width:767px) {
+    .cabecalho{
+    padding: 2% 0;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    justify-self: center;
+    text-align: center;
+    grid-template-columns: 18% 50% 10%;
+    margin-bottom: 3%;
+    border-bottom: 2px solid var(--section-conteudo);
+}
 }
 
 .logo {
     width: 50%;
     text-align: center;
-    top: 0;
-    margin-top: 3%;
-    margin-left: 8%;
+
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 767px) {
     .logo {
         width: 100%;
     }
@@ -35,50 +59,42 @@ body {
     text-align: center;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 767px) {
     .titulo {
-        margin-left: -18%;
-        font-size: 1.9em;
+        margin-left: -14%;
+        font-size: 50px;
         line-height: 1.3;
     }
 }
 
-.cabecalho {
-    max-height: auto;
-    min-height: 30.5h;
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    justify-self: center;
-    text-align: center;
-    grid-template-columns: 20% 50% 20%;
-    margin-bottom: 3%;
-    border-bottom: 2px solid var(--section-conteudo);
-}
+
 
 .apresentacao_section {
     height: auto;
-    width: 100%;
+    width: 70%; /* Utilizando sempre 70% da tela */
+    margin: 0 auto; /* Centralizando horizontalmente */
     text-align: center;
 }
 
 .apresentacao {
-    margin: 4% 0;
+    margin: 4% auto; /* Espaçamento nas laterais e centralizando horizontalmente */
     text-align: center;
     display: grid;
     justify-content: center;
     align-items: center;
     max-width: auto;
     grid-template-columns: 30% 50% 25% 30%;
+    gap: 10px;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 767px) {
     .apresentacao {
-        grid-template-columns: 30% 50% 25% 30%;
+        grid-template-columns: 10% 50% 35% 40%;
+        gap: 10px;
     }
 
     .apresentacao_section {
-        height: 40vh;
+        height: auto;
     }
 }
 
@@ -109,20 +125,18 @@ section b {
 .imagem {
     margin-left: 3%;
     height: 94%;
-    width: 90%;
-    min-height: 94%;
-    min-width: 90%;
+    width: 100%; /* Utilizando toda a largura do pai */
     max-height: 94%;
-    max-width: 90%;
     background-color: rgb(2, 46, 75);
 }
 
 .caixa_apresentacao nav {
-    text-align: right;
+    text-align: left;
 }
 
 .links a {
-    font-size: 15px;
+    text-align: center;
+    font-size: 20px;
     margin: 2px;
     padding: 0 2px 0 9px;
     color: rgb(255, 255, 255);
@@ -130,37 +144,48 @@ section b {
 }
 
 .links a:hover {
-    color: rgb(0, 255, 13);
-    text-shadow: #4e08ff 0 0 10px;
-    text-decoration: line-through;
+    color: rgb(18, 219, 34);
+}
+.links a:hover > :not(:hover){
+    color: red;
 }
 
+
 .links {
-    top: 1%;
-    position: fixed;
-    justify-content: flex-end;
-    display: grid;
+    display: flex;
+    flex-direction: column;
     text-align: left;
+    align-items: flex-start;
     border: 2px solid rgb(255, 255, 255);
     border-radius: 10px;
+    margin-right:2%;
     font-size: 7px;
     background-color: rgb(57, 57, 57);
 }
 
-@media only screen and (min-width: 0px) and (max-width: 1280px) {
+@media screen and (max-width: 767px) {
     .links {
-        top: 1.5%;
-        font-size: 20px;
+        right: 1%;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+        border: 2px solid rgb(255, 255, 255);
+        border-radius: 5px;
+        background-color: rgb(57, 57, 57);
     }
 
     .links a {
+        text-align: center;
         font-size: 15px;
     }
 }
 
+
 .links_fixo {
     display: flex;
-    align-items: center;
+    align-items: left;
+    text-align: left;
     justify-content: flex-end;
 }
 
@@ -185,7 +210,7 @@ section b {
 .itens_projeto {
     display: flex;
     margin: auto;
-    grid-template-columns: 23% 23% 23% 23%;
+    grid-template-columns: 50% 50%;
     justify-content: center;
     justify-self: center;
     align-items: center;
@@ -282,6 +307,11 @@ section b {
     align-items: center;
     justify-content: center;
 }
+@media only screen and (max-width: 1000px) {
+    .grupo{
+        grid-template-columns: 20vh 3% 20vh 3% 20vh;
+    }
+}
 
 .integrantes {
     margin: 5%;
@@ -298,7 +328,7 @@ section b {
 }
 
 .local_section {
-    margin-top: 3%;
+    margin-top: 1%;
     height: auto;
     border-top: 1%;
     border-top: solid #fff;
@@ -323,8 +353,8 @@ section b {
 .container {
     border: 1%;
     border: solid #fff;
-    max-width: 600px;
-    margin: 50px auto;
+    max-width: 1000px;
+    margin: 10px auto;
     background-color: var(--section-conteudo);
     padding: 20px;
     border-radius: 8px;
@@ -340,12 +370,12 @@ section b {
 }
 
 .item-contato {
-    width: calc(33.33% - 10px);
+    width: calc(33.33% - 30px);
     margin-bottom: 20px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    box-sizing: border-box;
+    box-sizing:border-box;
 }
 
 .tipo-contato {
@@ -366,5 +396,28 @@ section b {
 
 .link-github:hover {
     text-decoration: underline;
-    color: #0056b3;
+    color: #6cadf3;
+}
+@media screen and (max-width: 767px) {
+    .info-contato {
+        display: block;
+        font-weight: 400;
+        font-size: 10px ;
+    }
+    .item-contato {
+        width: calc(33.33% - 10px);
+        margin-bottom: 20px;
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        box-sizing:border-box;
+    }
+}
+
+.botao_home img{
+    margin: 1%;
+    background-color: #fff;
+    border-radius: 100%;
+    text-align: center;
+    cursor: pointer;
 }
